# job-titles-grouping

./: .env.example  .gitignore  Dockerfile  README.md  explore.ipynb  job-areas.json  job-levels.json  main_inference.py  main_train.py  pyproject.toml
cache/: best_model.pth  encoders.pkl  sample.csv
src/: data.py  inference.py  logger.py  model.py  train.py
