[tool.poetry]
name = "job-titles-grouping"
version = "0.1.0"
description = ""
authors = ["Oleh Toporkov <oleh.toporkov@gmail.com>"]
readme = "README.md"
packages = [{include = "job_titles_grouping"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kaggle = "^1.6.17"
urllib3 = "1.26.0"
dotenv = "^0.9.9"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.10"}
pyarrow = "^19.0.1"
matplotlib = "^3.10.1"
transformers = "^4.49.0"
torch = "^2.6.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
